added pagination, custom non-static folders, refactored masonry routes

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,6 @@
         </form>
     </div>
     <div class="bBody">
-        <a href="/masonry-with-gutter?path=images">Masonry</a>
+        <a href="/masonry/with-gutter?path=images">Masonry</a>
     </div>
 </body>
