--- a/templates/masonry/with_gutter.html
+++ b/templates/masonry/with_gutter.html
@@ -2,8 +2,8 @@
 
 {% block intro %}
 <h3 title="Masonry with Gutter">With Gutter</h3>
-<h3><a href="{{ url_for('masonry_bordered') }}" id="masonryLink1" title="Bordered Masonry">Bordered</a></h3>
-<h3><a href="{{ url_for('masonry_gutterless') }}" id="masonryLink2" title="Gutterless masonry">Gutterless</a>
+<h3><a href="/masonry/bordered" id="masonryLink1" title="Bordered Masonry">Bordered</a></h3>
+<h3><a href="/masonry/gutterless" id="masonryLink2" title="Gutterless masonry">Gutterless</a>
 </h3>
 {% endblock %}
 
@@ -11,10 +11,8 @@
 <div class="masonry">
     {%for i in images%}
     <div class="brick">
-        <img src="{{ url_for('static',filename='images/' + i) }}" alt="{{i}}" title="{{i}}">
+        <img src="{{url_for('serve_image', folder=path, filename=i)}}" alt="{{i}}" title="{{i}}">
     </div>
     {%endfor%}
 </div><!-- .masonry -->
-<a href="http://w3bits.com/css-masonry/" class="lab-article-button"
-    title="Learn more about this demo, read the tutorial">Read the Article &#187;</a>
 {% endblock %}
