--- a/templates/masonry/base_masonry.html
+++ b/templates/masonry/base_masonry.html
@@ -32,6 +32,7 @@
       {% block content %} {% endblock %}
       <br>
       <button id="prev-btn" onclick="loadImages(currentPage - 1)" disabled>Previous</button>
+      <span>Page {{ page }} of {{ total_pages }}</span>
       <button id="next-btn" onclick="loadImages(currentPage + 1)">Next</button>
       <br><br><br>
     </div>
