--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <header>
-
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/home.css') }}">
 </header>
 
-<body>
+<body class="body">
     <h1>Welcome!</h1>
     <h3>Please Login or <a href="/register">Register</a></h3>
     <p style="color:{{color}};">{{message}}</p>
