--- a/templates/register.html
+++ b/templates/register.html
@@ -3,9 +3,10 @@
 
 <head>
     <title>Register</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/home.css') }}">
 </head>
 
-<body>
+<body class="body">
     <h1>Register</h1>
     <form id="registerForm" action="/register" method="post">
         <label>Username</label><br>
